WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115840
REGRESSION (
r145680
): No box shadow rendered on element with positioned child that obscures it
https://bugs.webkit.org/show_bug.cgi?id=115840
Summary
REGRESSION (r145680): No box shadow rendered on element with positioned child...
Simon Fraser (smfr)
Reported
2013-05-08 18:19:22 PDT
Created
attachment 201125
[details]
Testcase There should be a box shadow on the parent of the gray box in the testcase, but it's missing.
Attachments
Testcase
(684 bytes, text/html)
2013-05-08 18:19 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(4.34 KB, patch)
2013-05-08 22:10 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
Alternative patch
(7.32 KB, patch)
2013-05-08 22:27 PDT
,
Antti Koivisto
simon.fraser
: review-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-05-08 18:19:48 PDT
<
rdar://problem/13845025
>
Simon Fraser (smfr)
Comment 2
2013-05-08 18:28:39 PDT
Regressed at
http://trac.webkit.org/changeset/145680
Simon Fraser (smfr)
Comment 3
2013-05-08 21:57:22 PDT
Ah, there's a code path where paintFillLayer() paints the box shadow.
Simon Fraser (smfr)
Comment 4
2013-05-08 21:58:20 PDT
…which was done to fix
bug 78728
.
Simon Fraser (smfr)
Comment 5
2013-05-08 22:10:47 PDT
Created
attachment 201134
[details]
Patch
Antti Koivisto
Comment 6
2013-05-08 22:27:33 PDT
Created
attachment 201136
[details]
Alternative patch
Antti Koivisto
Comment 7
2013-05-08 22:31:25 PDT
The simpler approach might be better. I'm not sure if it is semantically correct to consider box shadow in background extent.
Simon Fraser (smfr)
Comment 8
2013-05-08 22:53:20 PDT
Comment on
attachment 201136
[details]
Alternative patch View in context:
https://bugs.webkit.org/attachment.cgi?id=201136&action=review
> Source/WebCore/rendering/RenderBox.cpp:1151 > + LayoutRect backgroundRect = pixelSnappedIntRect(style()->boxShadow() ? boxShadowExtent() : borderBoxRect());
I think it's confusing for a function called backgroundPaintedExtent() to return the box shadow extent, unless you rename it to boxDecorationExtent(). This patch also means that you'll always consult box shadows for obscuration, even when the background might be obscured and the shadow drawn separately. So I prefer my patch.
Simon Fraser (smfr)
Comment 9
2013-05-10 17:58:55 PDT
https://trac.webkit.org/r149918
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug